# kilnpi

./: .gitignore  README.md  justfile  kilnpi-splash.service  kilnpi.service  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  dto.py  main.py
backend/api/: control.py  history.py  programs.py  slots.py  stats.py  status.py  system_info.py  ws.py
backend/modbus/: controller.py  mock_controller.py  mock_pzem.py  pzem.py  real_controller.py  registers.py
backend/models/: database.py  schemas.py
backend/services/: buttons.py  display.py  poller.py  power_poller.py  recorder.py
docs/research/: thermomart_pid_rs485_protocol.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  websocket.ts
frontend/src/components/: FiringChart.tsx  PowerChart.tsx  ProfileChart.tsx  ProfileEditor.tsx  SegmentTable.tsx  StatusBar.tsx  TempGauge.tsx
frontend/src/hooks/: usePrograms.ts  useStatus.ts  (+1 more)
scripts/: deploy-frontend.sh  install-splash.sh  probe_registers.py  raw_modbus_test.py  read_all_registers.py  scan_modbus.py  set_pzem_address.py  splash.py  test_display.py  test_oled_fonts.py  test_pro_counting.py  test_write.py
tests/: conftest.py  test_api.py  test_buttons.py  test_config.py  test_display.py  test_dto.py  test_history.py  test_mock_controller.py  test_mock_pzem.py  test_poller.py  test_power_integration.py  test_power_poller.py  test_programs_csv.py  test_pzem.py  test_real_controller_offline.py  test_recorder.py  test_registers.py  test_slots.py  test_stats.py  test_websocket.py
(+8 files in other folders)
